making tips to unregistered (part one)

--- a/config.py.dist
+++ b/config.py.dist
@@ -9,7 +9,8 @@ rpc_config = {
 }
 
 bot_config = {
-    'user_file': 'path/to/file'
+    'user_file': 'path/to/file',
+    'unregistered_tip_user': 'path/to/an/other/file',
 }
 
 url_get_value = {
