--- a/config.py.dist
+++ b/config.py.dist
@@ -2,10 +2,10 @@
 ## sample of config file
 
 rpc_config = {
-    "doge_rpc_port": "22545",
-    "doge_rpc_host": "127.0.0.1",
-    "doge_rpc_username": "dogecoinrpc",
-    "doge_rpc_password": "dogecoinpassword",
+    "rpc_port": "22545",
+    "rpc_host": "127.0.0.1",
+    "rpc_username": "dogecoinrpc",
+    "rpc_password": "dogecoinpassword",
     "timeout": 60
 }
 
