--- a/config.py.dist
+++ b/config.py.dist
@@ -22,8 +22,6 @@ unregistered_tip_user = DATA_PATH + 'unregistered_tip_user.json'
 logs_path = DATA_PATH + 'logs/'
 history_path = DATA_PATH + 'history/'
 
-# vanity-gen request
-vanitygen = DATA_PATH + 'vanitygen.json'
 
 spam_limit = 1000
 rate_fee = 1
@@ -39,6 +37,11 @@ tip_keyword = {
     "dogecar" : 98
 }
 
+# vanity-gen request
+vanity_enabled = False
+vanitygen = DATA_PATH + 'vanitygen.json'
+vanitygen_address = "DGo1dHhU2pRAyU58LgACYU3i3fpaZakG5u"
 vanitygen_price = {
- ""
+ "3":"10",
+ "4":"50"
 }
